<resources>
    <string name="app_name">MaRvel Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="events">Events</string>
    <string name="Comics">Comics</string>
    <string name="series">Series</string>
    <string name="stories">Stories</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="searchHint">search For a Character</string>
    <string name="randomShow" translatable="false">sssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
    sssssssssssssssssssssssssssssssssssssssssssssssssssss</string>
</resources>