<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".presentation.SearchScreen.SearchFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        style="@style/SearchViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search_view_shape"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@+id/cancel_txt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/searchHint" />

    <TextView
        android:id="@+id/cancel_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="parent" />




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/search_item"
        tools:orientation="vertical" />
    <ProgressBar
        android:id="@+id/search_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"

        app:layout_constraintBottom_toBottomOf="@id/search_rv"
        app:layout_constraintEnd_toEndOf="@id/search_rv"
        app:layout_constraintStart_toStartOf="@id/search_rv"
        app:layout_constraintTop_toTopOf="@+id/search_rv" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/search_rv"
        app:layout_constraintEnd_toEndOf="@id/search_rv"
        app:layout_constraintStart_toStartOf="@id/search_rv"
        app:layout_constraintTop_toTopOf="@+id/search_rv"
        />

</androidx.constraintlayout.widget.ConstraintLayout>